# ant-on-pi

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
crates/agent-core/: Cargo.toml
crates/agent-core/src/: command.rs  main.rs
crates/agent-interface/: Cargo.toml
crates/agent-interface/src/: lib.rs  main.rs
crates/encoder/: Cargo.toml  tools_embeddings.json
crates/encoder/src/: encoder.rs  lib.rs  main.rs  tools_embedding.rs
crates/function-caller/: Cargo.toml
crates/inference/: Cargo.toml
crates/inference/src/: lib.rs  main.rs
crates/reminder/: Cargo.toml
crates/task-scheduler/: Cargo.toml
crates/task-scheduler/src/: job.rs  lib.rs  scheduler.rs  store.rs
crates/tools/: tools_list.json
